# aegis

./: .gitignore  README.md
.github/workflows/: edge-router-ci.yml
edge-router/: package-lock.json  package.json  tsconfig.json
edge-router/src/: index.test.ts  index.ts
geo-core/: package-lock.json  package.json  tsconfig.json
geo-core/src/: crypto.test.ts  crypto.ts  geohash.test.ts  geohash.ts  index.ts  types.ts
tui-observer/: pyproject.toml  requirements.txt
tui-observer/src/: app.py  main.py  trigger_alert.py
web-app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web-app/src/: App.tsx  index.css
web-app/src/hooks/: useGeolocation.ts  useSwarmSocket.ts
