[project]
name = "aegis-tui-observer"
version = "0.1.0"
description = "Cross-platform Python TUI for visualizing live Aegis GeoHash grid and alert pings"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.70.0",
    "rich>=13.7.0",
    "websockets>=12.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
